--- a/scape.cabal
+++ b/scape.cabal
@@ -6,12 +6,12 @@ build-type:     Simple
 cabal-version:  >= 1.10
 
 executable app
-  build-depends:    base, miso
+  build-depends:    base, miso, containers
   if !impl(ghcjs)
     build-depends:
         jsaddle, jsaddle-warp, transformers, warp, websockets
   default-language: Haskell2010
   ghcjs-options:    -dedupe
   main-is:          Main.hs
-  other-modules:    
-    State
+  other-modules:    Game
+  
