--- a/scape.cabal
+++ b/scape.cabal
@@ -14,4 +14,4 @@ executable app
     build-depends:  jsaddle, jsaddle-warp, transformers, warp, wai-app-static, websockets
   default-language: Haskell2010
   main-is:          Main.hs
-  other-modules:    Game, Scene, View, Input
+  other-modules:    Game, Update, Scene, View, Input
