--- a/scape.cabal
+++ b/scape.cabal
@@ -6,6 +6,7 @@ build-type:     Simple
 cabal-version:  >= 1.10
 
 executable app
+  ghc-options:      -Wall
   build-depends:    base, miso, containers
   if impl(ghcjs)
     ghc-options:    -dedupe
@@ -14,4 +15,4 @@ executable app
     build-depends:  jsaddle, jsaddle-warp, transformers, warp, wai-app-static, websockets
   default-language: Haskell2010
   main-is:          Main.hs
-  other-modules:    Game, Update, Scene, View, Input
+  other-modules:    Mob, Game, Update, Scene, View, Input
