--- a/scape.cabal
+++ b/scape.cabal
@@ -11,6 +11,7 @@ executable app
   if impl(ghcjs)
     ghc-options:    -dedupe
     cpp-options:    -DGHCJS_BROWSER
+    build-depends:  ghcjs-base
   else
     build-depends:  jsaddle, jsaddle-warp, transformers, warp, wai-app-static, websockets
   default-language: Haskell2010
